# moral-money-ecosystem

./: .gitignore  README.md  UPDATES.md
ai-agents/: agente_etica.py
blockchain-core/: Cargo.toml
blockchain-core/docs/: MEMORIA_SISTEMA.md  community-system.md  constitution.md  economia.md  governanca.md  manifesto.md  reputation.md
blockchain-core/pallets/reputation/: Cargo.toml
blockchain-core/pallets/reputation/src/: lib.rs
blockchain-core/runtime/: Cargo.toml
blockchain-core/runtime/src/: lib.rs
docs/: MEMORIA_SISTEMA.md  community-system.md  reputation-algorithm.md  reputation-system.md
docs/constitution/: architecture.md  community-model.md  constitution.md  principles.md  reputation-model.md
frontend/: index.html
